back slider added

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="libs/backslider/css/backslider.css">
 	<link rel="stylesheet" href="libs/jquery-minicolors/jquery.minicolors.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -102,6 +103,7 @@
 <script src="libs/gsap/src/minified/TweenMax.min.js"></script>
 <script src="libs/gsap/src/minified/TimelineMax.min.js"></script>
 <script src="libs/vec2d/dist/vec2d.min.js"></script>
+<script src="libs/backslider/js/jquery.backslider.min.js"></script>
 <script src="libs/angular/angular.min.js"></script>
 <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="libs/jquery-minicolors/jquery.minicolors.js"></script>
@@ -119,6 +121,11 @@
 <!-- Layout -->
 <script src="app/layout/layout.module.js"></script>
 <script src="app/layout/nav.controller.js"></script>
+
+<!-- Home -->
+<script src="app/home/home.module.js"></script>
+<script src="app/home/home.controller.js"></script>
+<script src="app/home/slider.directive.js"></script>
 
 <!-- Timeline -->
 <script src="app/timeline/timeline.module.js"></script>
@@ -144,7 +151,6 @@
 <script src="app/design/design.module.js"></script>
 <script src="app/design/design.config.js"></script>
 <script src="app/design/design.controller.js"></script>
-
 
 <!-- Data Services -->
 <script src="app/service/service.module.js"></script>
