home page finished

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
 				</div>
 				<div class="spread-menu__body">
 					<nav class="nav-types">
+						<h3 class="nav-types__heading">Haz que ese momento perdure por siempre selecciona el tequila de tu preferencia y personaliza tu etiqueta.</h3>
 						<ul class="list-unstyled type-list">
-							
 							<li class="type-list__item" ng-repeat="type in vm.types">
 								<a class="type-item" href="#">
 									<div class="type-item__body">
