--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <title>Tequila Hacienda Maravatio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600' rel='stylesheet' type='text/css'> -->
+  <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600' rel='stylesheet' type='text/css'> 
   <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="app/extras/backslider/css/backslider.css">
@@ -98,17 +98,17 @@
   <!-- / Wrapper -->
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
+  <script src="libs/underscore/underscore-min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="libs/gsap/src/minified/TweenMax.min.js"></script>
   <script src="libs/gsap/src/minified/TimelineMax.min.js"></script>
   <script src="libs/vec2d/dist/vec2d.min.js"></script>
   <script src="libs/angular/angular.min.js"></script>
+  <script src="libs/ngstorage/ngStorage.min.js"></script>
   <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="libs/jquery-minicolors/jquery.minicolors.js"></script>
   <script src="libs/angular-minicolors/angular-minicolors.js"></script>
   <script src="libs/jcarousel/dist/jquery.jcarousel.js"></script>
-
-
 
   <!-- Extras -->
   <script src="app/extras/navigation.js"></script>
