--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,7 @@
 <script src="app/service/upload.service.js"></script>
 <script src="app/service/messages.service.js"></script>
 <script src="app/service/design-network.service.js"></script>
+<script src="app/service/order.service.js"></script>
 
 <!-- App uploader -->
 <script src="app/upload/upload.module.js"></script>
